# Klondike

./: CMakeLists.txt  main.cpp
klondike_v_1/: Klondike.cpp  Klondike.h
klondike_v_1/Controllers/: Controller.cpp  Controller.h
klondike_v_1/Models/: Card.cpp  Card.h  Deck.cpp  Deck.h  Enums.h  Foundation.cpp  Foundation.h  Pile.cpp  Pile.h  Remainder.cpp  Remainder.h  Stack.cpp  Stack.h  Waste.cpp  Waste.h
